tests/NormalTests/paczka1/fuzzy1/30055018.err
Error in line 1: lbSMOvg S160 99,0
Error in line 14: 7hvtTb A638 5,93
Error in line 15: lbµMOvg µ160 19,4
Error in line 10: 7hvtTb A589 15,4
Error in line 13: ocOYnKL7 A589 50,3
Error in line 17: A589 A589 6,5
Error in line 20: ocOYnKL7 A186 63,4
Error in line 30: lbSMOvg A589 51,7
Error in line 36: 4FT A58m 56,6
Error in line 37: 4FT A589 271,1
